# tut

./: .gitignore  Cargo.toml  README.md  flake.nix  gleam.toml  manifest.toml
.github/workflows/: bump.yml  test.yml
src/: daily.rs  daily_router.rs  lib.rs  main.rs  participant.rs  router.rs  tut.gleam
src/controllers/: daily.rs  home.rs  mod.rs
src/tut/: daily.gleam  daily_router.gleam  router.gleam
src/tut/daily/: daily.gleam  daily_router.gleam
src/tut/pages/: daily.gleam  home.gleam
src/tut/web/: router.gleam
src/tut/web/controllers/: daily.gleam  home.gleam
src/tut/web/pages/: daily.gleam  home.gleam  join_daily.gleam  new_daily.gleam
src/tut/web/pages/layouts/: root.gleam
src/tut/web/views/components/: daily_event.gleam  toast.gleam
src/tut/web/views/layouts/: root.gleam
src/tut/web/views/pages/: home.gleam  join_daily.gleam  new_daily.gleam
src/views/components/: daily_state.rs
src/views/layouts/: root.rs
src/views/pages/: daily.rs  join_daily.rs  mod.rs  new_daily.rs  waiting_room.rs
src/web/: router.rs
src/web/controllers/: daily.rs  home.rs
src/web/views/components/: daily_event.rs  daily_state.rs  mod.rs  toast.rs
src/web/views/layouts/: root.rs
src/web/views/pages/: daily.rs  home.rs  join_daily.rs  mod.rs  new_daily.rs
tut/: Cargo.toml
tut-core/: Cargo.toml
tut-core/src/: daily.rs  daily_router.rs  lib.rs  participant.rs  waiting_room.rs
tut-web/: Cargo.toml
tut-web/src/: main.rs  router.rs
tut-web/src/controllers/: daily.rs
tut-web/src/views/components/: daily_state.rs
tut-web/src/views/pages/: daily.rs  home.rs  join_daily.rs  new_daily.rs
tut/src/: daily.rs  participant.rs
