[package]
name = "tut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros", "ws"] }
clap = { version = "4.4.13", features = ["derive", "env"] }
futures = "0.3.30"
maud = { git = "https://github.com/lambda-fairy/maud.git", features = ["axum"] } # TODO: Waiting for newer version with axum integration to be published
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
