[package]
name = "tut"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros", "ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
clap = { version = "4.4.13", features = ["derive", "env"] }
derive_more = "0.99.17"
futures = "0.3.30"
maud = { git = "https://github.com/lambda-fairy/maud.git", features = ["axum"] } # TODO: Waiting for newer version with axum integration to be published
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
