[workspace]
members = [".", "tut-core"]

[package]
name = "tut"
edition = "2021"
version = "0.1.0"

[dependencies]
tut-core = { path = "./tut-core" }

anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
clap = { version = "4.5.0", features = ["derive", "env"] }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
