[package]
name = "tut-web"
edition = "2021"
version.workspace = true

[dependencies]
tut = { path = "../tut" }

anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros", "ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
clap = { version = "4.4.13", features = ["derive", "env"] }
maud = { git = "https://github.com/lambda-fairy/maud.git", features = ["axum"] } # TODO: Waiting for newer version with axum integration to be published
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
